new tests added and unnecessary test removed